--- a/packages/@markuplint/astro-parser/package.json
+++ b/packages/@markuplint/astro-parser/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/astro-parser",
-	"version": "4.2.1-alpha.0",
+	"version": "4.3.0",
 	"description": "astro parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -21,8 +21,8 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/ml-ast": "4.0.2-alpha.0",
-		"@markuplint/parser-utils": "4.2.1-alpha.0",
+		"@markuplint/ml-ast": "4.1.0",
+		"@markuplint/parser-utils": "4.3.0",
 		"astro-eslint-parser": "0.16.3"
 	},
 	"devDependencies": {
