--- a/packages/@markuplint/pug-parser/package.json
+++ b/packages/@markuplint/pug-parser/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/pug-parser",
-	"version": "4.2.1-alpha.0",
+	"version": "4.3.0",
 	"description": "Pug parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -21,9 +21,9 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/html-parser": "4.2.1-alpha.0",
-		"@markuplint/ml-ast": "4.0.2-alpha.0",
-		"@markuplint/parser-utils": "4.2.1-alpha.0",
+		"@markuplint/html-parser": "4.3.0",
+		"@markuplint/ml-ast": "4.1.0",
+		"@markuplint/parser-utils": "4.3.0",
 		"pug-lexer": "5.0.1",
 		"pug-parser": "6.0.0"
 	}
