--- a/website/package.json
+++ b/website/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "site:start": "yarn site:prebuild; docusaurus start",
     "site:build": "yarn site:prebuild; docusaurus build",
-    "site:prebuild": "node scripts/prebuild/index.mjs; npx prettier --write './src/**/*{ts,tsx,json,rc,md,mdx,css,scss}';",
+    "site:prebuild": "tsx scripts/prebuild/index.mts; npx prettier --write './src/**/*{ts,tsx,json,rc,md,mdx,css,scss}';",
     "site:lint": "prettier --write './**/*{js,ts,tsx,mdx}' './*{json,rc,js}' '!./build/**/*' '!./.docusaurus/**/*'; eslint --fix './**/*.{js,ts,tsx}' './*.{js,ts}'; stylelint './**/*.css'; textlint --fix './website/i18n/ja'; cd ../; yarn cli './website/**/*.tsx'",
     "site:up": "yarn upgrade-interactive --latest"
   },
@@ -31,12 +31,15 @@
     "@docusaurus/module-type-aliases": "3.1.1",
     "@docusaurus/tsconfig": "3.1.1",
     "@imgix/js-core": "3.8.0",
+    "@tsconfig/strictest": "^2.0.4",
+    "@types/glob": "^8.1.0",
     "eslint-plugin-react": "7.34.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "stylelint": "16.2.1",
     "stylelint-config-recess-order": "5.0.0",
     "stylelint-config-standard": "36.0.0",
     "stylelint-order": "6.0.4",
+    "tsx": "^4.7.1",
     "typescript": "5.4.2"
   },
   "engines": {
