--- a/packages/@markuplint/rules/tsconfig.json
+++ b/packages/@markuplint/rules/tsconfig.json
@@ -3,8 +3,7 @@
 	"compilerOptions": {
 		"composite": true,
 		"outDir": "./lib",
-		"rootDir": "./src",
-		"resolveJsonModule": true
+		"rootDir": "./src"
 	},
 	"references": [
 		{
